[gd_scene load_steps=4 format=3 uid="uid://dq635783qymhj"]

[ext_resource type="Script" path="res://menu.gd" id="1_2etxg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wynwy"]
bg_color = Color(0.184314, 0.184314, 0.184314, 1)
border_width_left = 40
border_width_top = 8
border_width_right = 40
border_width_bottom = 8
border_color = Color(0.184314, 0.184314, 0.184314, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Theme" id="Theme_ces74"]
Button/font_sizes/font_size = 32
Button/styles/normal = SubResource("StyleBoxFlat_wynwy")

[node name="GridContainer" type="GridContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -224.0
offset_top = 64.0
offset_right = 224.0
offset_bottom = 532.0
grow_horizontal = 2
theme = SubResource("Theme_ces74")
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 16
columns = 2
script = ExtResource("1_2etxg")

[node name="addTimer" type="Button" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 77
text = "+"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="addTimer" to="." method="_on_add_timer_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
